--- a/src/index.html
+++ b/src/index.html
@@ -27,4 +27,8 @@
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
+<aio-shell></aio-shell>
+    <script src="polyfills.{HASH}.bundle.js"></script>
+    <script src="sw-register.{HASH}.bundle.js"></script>
+    <script src="main.{HASH}.bundle.js"></script>
 </html>
